--- a/settings/header.html
+++ b/settings/header.html
@@ -36,6 +36,7 @@
           <ul class="nav navbar-nav">
             <li ><a href="profile.html">Profile</a></li>
             <li ><a href="game.html">Game</a></li>
+            <li ><a href="http://chunkof.hatenablog.com/">Blog</a></li>
           </ul>
         </div>
       </div>
